Demo04/dov-bear.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
 name: dov-deploy
 labels:
  name: dov-deploy
spec:
 replicas: 3
 selector: 
  matchLabels:
   name: dov-pod
 template:
  metadata:
   name: dov-pod
   labels:
    name: dov-pod
    dept: engg 
# namespace: myNS -- if not defined now, have to define later.
  spec: 
   affinity:
    podAntiAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
     - labelSelector:
        matchLabels:
         name: dov-pod
         dept: engg
       topologyKey: doks.digitalocean.com/node-id ## to create only 1 pod per node.
   containers:
   - name: dov-container
     image: stackupiss/dov-bear:v2
     imagePullPolicy: IfNotPresent
     ports: 
     - name: dov-port 
       containerPort: 3000
     resources:
      requests:
       cpu: 100m
       memory: 32
---
apiVersion: v1
kind: Service
metadata:
 name: dov-svc
 labels:
  name: dov-svc
spec:
 type: LoadBalancer
 selector: 
  name: dov-pod
 ports:
 - port: 8080 
   targetPort: dov-port 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: dov-ing
 labels:
  name: dov-ing
 annotations:
  nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
 ingressClassName: nginx
 rules:
 - host: dov-144.126.243.200.nip.io
   http:
    paths:
    - path: /
      pathType: Prefix
      backend: 
       service: 
        name: dov-svc
        port: 
         number: 8080

---
apiVersion: autoscaling/v2beta2
kind: HorizontalPodAutoscaler

metadata:
 name: dov-hpa
 labels:
  name: dov-hpa
spec:
 minReplicas: 1
 maxReplicas: 4
 scaleTargetRef:
  apiVersion: apps/v1
  kind: Deployment
  name: dov-deploy
 metrics: 
  - type: Resource
    resource: 
     name: cpu
     target: 
      type: Utilization
      averageUtilization: 70
